a massive overhaul to support the latest spring, java 21 versions. Trivialy testing with HttpReader shows everything to be working but we need to extensively test java 21 virtual threads to see if we can benefit from this new kind of mapping