@@ -1,18 +1,15 @@
 package org.onedatashare.transferservice.odstransferservice.service.step;
 
-import org.onedatashare.transferservice.odstransferservice.constant.ODSConstants;
 import org.onedatashare.transferservice.odstransferservice.model.DataChunk;
 import org.onedatashare.transferservice.odstransferservice.service.InfluxCache;
 import org.onedatashare.transferservice.odstransferservice.service.cron.MetricsCollector;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.batch.core.StepExecution;
 import org.springframework.batch.core.annotation.AfterRead;
 import org.springframework.batch.core.annotation.AfterWrite;
 import org.springframework.batch.core.annotation.BeforeRead;
 import org.springframework.batch.core.annotation.BeforeWrite;
+import org.springframework.batch.item.Chunk;
 
-import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.HashMap;
 import java.util.List;
@@ -38,23 +35,24 @@ public class ODSBaseWriter {
     @BeforeWrite
     public void beforeWrite() {
         LocalDateTime startWriteTime = LocalDateTime.now();
-        this.writeStartTimes.put(Thread.currentThread().getId(), startWriteTime);
+        this.writeStartTimes.put(Thread.currentThread().threadId(), startWriteTime);
     }
 
     @AfterWrite
-    public void afterWrite(List<? extends DataChunk> items) {
-        if (items == null) return;
+    public void afterWrite(Chunk<? extends DataChunk> chunk) {
+        List<? extends DataChunk> items = chunk.getItems();
         LocalDateTime writeEndTime = LocalDateTime.now();
         long totalBytes = items.stream().mapToLong(DataChunk::getSize).sum();
-        LocalDateTime writeStartTime = this.writeStartTimes.get(Thread.currentThread().getId());
+        LocalDateTime writeStartTime = this.writeStartTimes.get(Thread.currentThread().threadId());
         //this is a cache for the optimizer directly in. This i actually think should be deleted and all data querying maybe ideally is done through the monitoring interface
-        influxCache.addMetric(Thread.currentThread().getId(), stepExecution, totalBytes, writeStartTime, writeEndTime, InfluxCache.ThroughputType.WRITER, items.get(0).getSize());
+        influxCache.addMetric(Thread.currentThread().threadId(), stepExecution, totalBytes, writeStartTime, writeEndTime, InfluxCache.ThroughputType.WRITER, items.get(0).getSize());
+        System.gc();
     }
 
     @BeforeRead
     public void beforeRead() {
         LocalDateTime startReadTime = LocalDateTime.now();
-        this.readStartTimes.put(Thread.currentThread().getId(), startReadTime);
+        this.readStartTimes.put(Thread.currentThread().threadId(), startReadTime);
     }
 
     @AfterRead
@@ -63,8 +61,8 @@ public class ODSBaseWriter {
         if (item == null) {
             return;
         }
-        LocalDateTime readStartTime = this.readStartTimes.get(Thread.currentThread().getId());
+        LocalDateTime readStartTime = this.readStartTimes.get(Thread.currentThread().threadId());
         if (readStartTime == null) return;
-        influxCache.addMetric(Thread.currentThread().getId(), stepExecution, item.getSize(), readStartTime, endTime, InfluxCache.ThroughputType.READER, item.getSize());
+        influxCache.addMetric(Thread.currentThread().threadId(), stepExecution, item.getSize(), readStartTime, endTime, InfluxCache.ThroughputType.READER, item.getSize());
     }
 }
